<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>line_maze_solver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="olympusforge@todo.todo">olympusforge</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>




  
  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  



  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ignition-msgs</depend>
  <depend>ros_gz_bridge</depend>
  <build_depend>gazebo_dev</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>